--- a/modules/1237/pages/image2-written-request.adoc
+++ b/modules/1237/pages/image2-written-request.adoc
@@ -1,6 +1,12 @@
 = Jobst's Written Request
 :page-role: wide
 
+== Overview
+
+Jobst Heinrich's written request is the smaller text found on the Forestry Department's Report:
+
+image:::02-overview.png[link=self]
+
 == Salutation
 
 The text below appears to the right of the main text of the forestry report
