--- a/modules/1237/pages/image2-written-request.adoc
+++ b/modules/1237/pages/image2-written-request.adoc
@@ -5,7 +5,7 @@
 
 Jobst Heinrich's written request is the smaller text found on the Forestry Department's Report:
 
-image:::02-overview.png[link=self]
+image:::02-overview.png[align=left,link=self]
 
 == Salutation
 
