--- a/modules/1237/pages/image2-forestry-report.adoc
+++ b/modules/1237/pages/image2-forestry-report.adoc
@@ -64,23 +64,25 @@ ____
 Chamber: No. 662.                          No. 1.
 Chamber rescript:
 
-regarding the forestry office report.     presented: 30 May 1798.
+regarding the Forestry Office report.     presented: 30 May 1798.
 Received: 14 June 1798
             MK
 
 The requested plot lies
-on the village street of
-Berenbusch. It is
+in the village street of
+Berenbusch, and is
 a small
-corner that can be
-designated
-without any disadvantage. — The poplar trees standing on it
-would then be sold by the forestry office,
-and Krückeberg would be obliged
-to commit himself at another
-location in the forest, for each poplar to be felled,
-to plant three sapling poles in return.
-                                  Maas, forestry official
+corner that may be
+granted without causing
+any disadvantage.
+— The poplars standing
+there are to be sold by the forestry office,
+and Krückeberg is to be
+obligated to replant, in another
+location in the forest, three saplings 
+for each poplar that is felled.
+
+                   Maas, Forestry Officier
 ____
 |===
 
