--- a/modules/1237/nav.adoc
+++ b/modules/1237/nav.adoc
@@ -1,6 +1,7 @@
 .xref:index.adoc[]
 //NLA BU, K 2, A Nr. 1237
 * xref:cover.adoc[]
+* xref:timeline.adoc[]
 * xref:image1.adoc[]
 * xref:image2-intro.adoc[]
 ** xref:image2-forestry-report.adoc[]
