--- a/modules/1237/pages/timeline.adoc
+++ b/modules/1237/pages/timeline.adoc
@@ -1,4 +1,5 @@
 = Timeline of Events in the Case File of Colon Krückeberg (No. 10, Berenbusch)
+:page-role: wide
 
 This timeline is not yet complete. It needs to be revised.
 
