--- a/modules/1237/pages/timeline.adoc
+++ b/modules/1237/pages/timeline.adoc
@@ -12,7 +12,7 @@ This timeline is not yet complete. It needs to be revised.
 |29 May 1798
 |*Petition (Vorstellung)* of Colon Krückeberg No. 10, Berenbusch +
 (Designatio Actorum No. 1)
-|Krückeberg submits a request to expand his farmyard and garden. The petition is likely composed by or with the assistance of the Amt.
+|Krückeberg submits a request to expand his farmyard and garden. The petition is likely composed by or with the assistance of the Amt(administrative office).
 
 |30 May 1798
 |*praes:* Entry on Document Nr. 1 (Forstamt opinion)
