--- a/modules/1237/pages/timeline.adoc
+++ b/modules/1237/pages/timeline.adoc
@@ -1,7 +1,59 @@
 = Timeline of Events in the Case File of Colon Krückeberg (No. 10, Berenbusch)
 :page-role: wide
 
-This timeline is not yet complete. It needs to be revised.
+NOTE: This timeline is not yet complete. It needs to be revised.
+
+It takes a year and half until a decision is made on Jobst Heinrich's request to enlarge his garden and farmyard.
+
+Two governmental bodies, the *Cammer* and the *Amt*, report and communicate.
+
+== Difference Between the Cammer and the Amt
+
+The following explanation clarifies the roles of the *Cammer* (Kammer) and the *Amt* in the 18th–19th century administration of Schaumburg-Lippe:
+
+[glossary]
+Cammer (Kammer)::  
+The *Cammer* was the central governmental authority responsible for *fiscal administration, land management, taxation, forestry, and state property*.  
+It operated at the principality level and issued binding *Rescripte* (official decisions).  
+Its seat was typically in Bückeburg and it oversaw the activities of regional offices (Ämter).  
+In the case file concerning Jobst Heinrich Krückeberg, the Cammer was the body that made the *final decisions* on land grants.
+
+Amt::  
+The *Amt* was the *local or regional administrative office* responsible for executing the instructions of the Cammer.  
+It handled *field investigations, reports, local enforcement, and petitions*, and submitted findings to the Cammer.  
+The Amt had no final authority but provided the *practical groundwork* for the Cammer’s decisions.  
+In the case file, officials of the Amt Bückeburg & Arensburg surveyed land and submitted reports on Krückeberg's request.
+
+== Comparative Summary
+
+[cols="1,1,2"]
+|===
+|Aspect |Cammer (Kammer) |Amt
+
+|Level
+|Central Government
+|Local/Regional Office
+
+|Function
+|Fiscal policy, land assignments, official decisions
+|Implementation, field reports, administrative execution
+
+|Authority
+|Decision-making (issues *Rescripte*)
+|Advisory and executive (no final authority)
+
+|Jurisdiction
+|Entire principality (e.g., Schaumburg-Lippe)
+|Specific regions (e.g., Amt Bückeburg & Arensburg)
+
+|In Krückeberg Case
+|Approved or denied petitions and issued orders
+|Surveyed the land and submitted local reports
+|===
+
+== Timeline
+
+NOTE: Not complete
 
 [cols="2,5,6", options="header"]
 |===
