--- a/modules/1237/pages/image2-forestry-report.adoc
+++ b/modules/1237/pages/image2-forestry-report.adoc
@@ -65,7 +65,7 @@ Chamber: No. 662.                          No. 1.
 Chamber rescript:
 
 regarding the Forestry Office report.     presented: 30 May 1798.
-Received: 14 June 1798
+Recorded: 14 June 1798
             MK
 
 The requested plot lies
