--- a/modules/1237/pages/image3-4-report-and-response.adoc
+++ b/modules/1237/pages/image3-4-report-and-response.adoc
@@ -48,8 +48,8 @@ This is the report that accompanied the petition of Jobst Heinrich Krückeberg.
 |
 [verse]
 ____
-pr: 6. Merz 1799  
-Cam: N: 53.  
+Cam: N: 53.  pr: 6. Merz 1799       2
+
 2 1.  
 Forst-Sachen  
 
