--- a/modules/1237/pages/image5-6-main-txt.adoc
+++ b/modules/1237/pages/image5-6-main-txt.adoc
@@ -69,7 +69,7 @@ The complete text and its translation:
 |
 [verse]
 ____
-ad nr: Cam: 53. S. S. [Signatum Supra]
+ad nr: Cam: 53. S. S. [Signatum Supra]      3
 Concept Cammer: Rescript
 an die Beamten zu Buckeburg
 
