--- a/modules/1237/pages/image2-intro.adoc
+++ b/modules/1237/pages/image2-intro.adoc
@@ -1,4 +1,4 @@
-= Petition and Forestry Report on Land Request by Krückeberg
+= Document 1: Petition and Forestry Report on Land Request by Krückeberg
  May 1798
 
 image::02-overview.png[align=left,link=self]
