--- a/modules/1237/pages/image8-right-page.adoc
+++ b/modules/1237/pages/image8-right-page.adoc
@@ -1,4 +1,4 @@
-= Image 8, Right Page (Under Development)
+= Document 4¾: Under Development
 :page-role: wide
 
 This text is a brief regarding the previous documenmt that was sent and also referencing yet another document.
