--- a/modules/1237/pages/image8-right-page.adoc
+++ b/modules/1237/pages/image8-right-page.adoc
@@ -1,4 +1,4 @@
-= Document 4¾: Under Development
+= Document 4½: Under Development
 :page-role: wide
 
 This text is a brief regarding the previous documenmt that was sent and also referencing yet another document.
