--- a/modules/1237/pages/timeline.adoc
+++ b/modules/1237/pages/timeline.adoc
@@ -3,7 +3,7 @@
 NOTE: This timeline is not yet complete. It needs to be revised.
 
 It takes a year and half until a decision is made on Jobst Heinrich's request to enlarge his garden and farmyard.
-During this time, two governmental bodies, the *Cammer* and the *Amt*, interact. Six documents are generated.
+During this time, two governmental bodies, the *Cammer* and the *Amt*, interact and six documents are generated.
 
 == Difference Between the Cammer and the Amt
 
