--- a/modules/1237/pages/image6-right-page.adoc
+++ b/modules/1237/pages/image6-right-page.adoc
@@ -1,6 +1,29 @@
 = Document 4: No Title Yet (Under Development)
 :page-role: wide
 
+Document No. 4 (numbered "4" in the upper-right corner) is a formal report from the Ämter Bückeburg and Arensburg
+to the Vormundschaftliche Kammer, proposing that Jobst Heinrich Krückeberg be granted two parcels of land. This
+document states:
+
+[quote]
+____
+„Indem wir die geometrische Zeichnung … übersenden…“
+(“As we submit the geometric drawing…”)
+____
+
+This indicates that the drawing was sent together with that report — that is, it was enclosed with Document 4.
+
+Document No. 4½ (numbered "4½" in the upper-right corner) contains that very drawing, signed by Lieutenant Funck,
+a sworn surveyor. It is described in the Document Index as:
+
+[quote]
+____
+„dazu gehöriger Bericht von Lieutenant Funck“
+(“associated report by Lieutenant Funck”)
+____
+
+This means it is supplementary (“dazu gehörig”) to the preceding document — i.e., an enclosure to Document 4.
+
 image::06-right-page.png[link=self]
 
 == Transliteration and Translation
@@ -58,13 +81,13 @@ Rescript dated 11 March 1799
 
                                      p. 24, October 1800  
 
-As we herewith submissively transmit the geometric drawing  
+We respectfully submit the geometric drawing  
 of the plots assigned to Jobst Henrich  
 Krückeberg, No. 10, in Berenbusch,  
 for the enlargement of his garden  
-and yard, comprising 19 Ruthen 44 feet  
+and farmyard, comprising 19 Ruthen 44 feet  
 (decimal) and 1 Ruthe 90 feet in surface area,  
-we respectfully submit, in a non-binding  
+and we respectfully submit, in a non-binding  
 proposal, that he be instructed  
 to pay annually, beginning on the Feast of St. Michael,  
 for the first time, 2 Reichstaler and 1 Groschen  
