--- a/modules/1237/pages/image6-right-page.adoc
+++ b/modules/1237/pages/image6-right-page.adoc
@@ -81,24 +81,38 @@ Rescript dated 11 March 1799
 
                                      p. 24, October 1800  
 
-We respectfully submit the geometric drawing  
-of the plots assigned to Jobst Henrich  
-Krückeberg, No. 10, in Berenbusch,  
-for the enlargement of his garden  
-and farmyard, comprising 19 Ruthen 44 feet  
-(decimal) and 1 Ruthe 90 feet in surface area,  
-and we respectfully submit, in a non-binding  
-proposal, that he be instructed  
-to pay annually, beginning on the Feast of St. Michael,  
-for the first time, 2 Reichstaler and 1 Groschen  
-in clearance rent, excluding agio.  
+We respectfully submit the geometric drawing
+of the parcels allocated to Jobst Henrich
+Krückeberg No. 10 of Berenbusch
+for the enlargement of his garden
+and farmyard, measuring 19 rods (Ruthen) 44 feet
+(decimal) and 1 rod (Ruthe) 90 feet in area,
+and we make the proposal, without further negotiation,
+that he be assigned this land with the obligation
+to pay an annual clearing rent of
+2 Reichstaler 1 Groschen, excluding agio,
+beginning at Michaelmas of the present year.
 
-City of Bückeburg, 18 October 1800.  
+From Bückeburg, 18 October 1800.
 
                          J. H. Hablick    Stöling
 ____
 |===
 
+The phrase "we make the proposal, without further negotiation, that he be
+assigned this land..." should be interpreted as:
+
+[quote]
+____
+"We propose — without entering into any further negotiation or discussion
+(particularly with Jobst Heinrich Krückeberg) — that the land be formally
+assigned to him..."
+____
+
+This reflects that the offices of Bückeburg and Arensburg were putting forward
+a definitive recommendation or decision to the Kammer (Chamber), expecting it
+to be accepted and implemented without need for further consultation with the
+petitioner.
 
 === Glossary of Terms
 
