--- a/modules/1237/pages/image8-right-page.adoc
+++ b/modules/1237/pages/image8-right-page.adoc
@@ -1,8 +1,8 @@
 = Document 4½: Under Development
 :page-role: wide
 
-Document #4½ is signed by Lieutenant Funck, a "beeidigter Landmesser" (sworn land surveyor). As a technical specialist, Funck was not part of the
-administrative offices (Amt) that issued Document #4. His report was therefore logged as an independent piece of correspondence, even though it
+Document 4½ is signed by Lieutenant Funck, a "beeidigter Landmesser" (sworn land surveyor). As a technical specialist, Funck was not part of the
+administrative offices (Amt) that issued Document 4. His report was therefore logged as an independent piece of correspondence, even though it
 accompanied document #4.
 
 image::08-right-page.png[link=self]
