--- a/modules/1237/pages/image8-right-page.adoc
+++ b/modules/1237/pages/image8-right-page.adoc
@@ -90,7 +90,7 @@ assigned to him..."
 ____
 
 This reflects that the offices of Bückeburg and Arensburg were putting forward
-a definitive recommendation or decision to the Kammer (Chamber), expecting it
+a definitive recommendation or decision to the Cammer (Chamber), expecting it
 to be accepted and implemented without need for further consultation with the
 petitioner.
 
