--- a/modules/1237/pages/image6-right-page.adoc
+++ b/modules/1237/pages/image6-right-page.adoc
@@ -42,8 +42,8 @@ Vormundschaftliche Kammer
 der Aemter Bückeburg und Arensburg  
 
       ad ter                       Betr.  
-                                   Ausweisung
-Rescr: d. 11ten Merz 1799  
+ Rescr: d. 11ten Merz 1799         Ausweisung
+
 
                                      p. 24 8br 1800  
 
@@ -76,8 +76,7 @@ Guardianship Chamber
 of the Offices of Bückeburg and Arensburg  
 
       regarding                    Subject  
-                                   Land Allocation
-Rescript dated 11 March 1799  
+Directive dated 11 March 1799      Land Allocation
 
                                      p. 24, October 1800  
 
