--- a/modules/1237/pages/image6-right-page.adoc
+++ b/modules/1237/pages/image6-right-page.adoc
@@ -75,9 +75,10 @@ Guardianship Chamber
              Report  
 of the Offices of Bückeburg and Arensburg  
 
-      regarding                    Subject  
-Directive dated 11 March 1799      Land Allocation
+regarding Directive dated 11 March 1799      
 
+Subject  
+Land Allocation
                                      p. 24, October 1800  
 
 We respectfully submit the geometric drawing
