--- a/modules/1237/pages/image6-right-page.adoc
+++ b/modules/1237/pages/image6-right-page.adoc
@@ -1,4 +1,4 @@
-= Document 4: No Title Yet (Under Development)
+= Document 4: Submission of Geometric Drawing of Proposed Parcels to be Allocated
 :page-role: wide
 
 Document No. 4 (numbered "4" in the upper-right corner) is a formal report from the Ämter Bückeburg and Arensburg
@@ -70,10 +70,10 @@ ____
 [verse]
 ____
 Cammeral No. 322. Forestry Matters  
-             To  
-Guardianship Chamber  
-             Report  
-of the Offices of Bückeburg and Arensburg  
+
+To Guardianship Chamber  
+
+Report of the Offices of Bückeburg and Arensburg  
 
 regarding Directive dated 11 March 1799      
 
