--- a/modules/1237/pages/image8-right-page.adoc
+++ b/modules/1237/pages/image8-right-page.adoc
@@ -1,4 +1,4 @@
-= Document 4½: Under Development
+= Document 4½: Surveyor's Drawing of Two Parcels 
 :page-role: wide
 
 Document 4½ is signed by Lieutenant Funck, a "beeidigter Landmesser" (sworn land surveyor). As a technical specialist, Funck was not part of the
